NIFI-12546 Updated nifi-snowflake-bundle using current API methods
This closes #8187

Signed-off-by: David Handermann <exceptionfactory@apache.org>